@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.3 2003/01/29 11:13:28 jlam Exp $
+@comment $NetBSD: PLIST,v 1.4 2003/02/11 04:23:15 jlam Exp $
 README.html
 bin/HtmlConverter
 bin/appletviewer
@@ -876,6 +876,8 @@ include/jvmdi.h
 include/jvmpi.h
 include/linux/jawt_md.h
 include/linux/jni_md.h
+@exec	${LN} -sf . %D/jre
+@unexec	${RM} -f %D/jre
 lib/dt.jar
 lib/htmlconverter.jar
 lib/ir.idl
